# crosskey

./: Cargo.toml  README.md
examples/: keyboard_listener.rs
src/: hotkey_listener.rs  lib.rs  listener.rs
src/platform_impl/: mod.rs
src/platform_impl/macos/: mod.rs
src/platform_impl/windows/: key_display.rs  mod.rs  translate_key.rs
src/platform_impl/windows/window/: hotkey_listener_impl.rs  keyboard_listener_impl.rs  listener.rs  mod.rs
