[package]
name = "crosskey"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
raw-window-handle = "0.6.0"
bitflags = "2.5.0"
# use keyboard-types?
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = ["Win32_Foundation"]
