[package]
name = "crosskey"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "keyboard-types/serde"]
hotkeys = []

[dependencies]
kanal = "0.1.0-pre8"
raw-window-handle = "0.6.0"
keyboard-types = "0.7.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_TextServices"] }
lazy_static = "1.4.0"

[dev-dependencies]
winit = "0.29"